trocando usuario por utilizador

--- a/frontend/src/app/components/backoffice/sidebar/sidebar.html
+++ b/frontend/src/app/components/backoffice/sidebar/sidebar.html
@@ -21,7 +21,7 @@
          routerLink="/backoffice/users"
          routerLinkActive="active">
         <i class="cil-user me-2"></i>
-        <span>Usuários</span>
+        <span>Utilizadores</span>
       </a>
     </li>
 
