--- a/frontend/src/app/components/backoffice/header/header.html
+++ b/frontend/src/app/components/backoffice/header/header.html
@@ -8,11 +8,11 @@
 
       <a class="toplink"
          routerLink="/backoffice/users"
-         routerLinkActive="active">Usuários</a>
+         routerLinkActive="active">Utilizadores</a>
       
       <a class="toplink"
          routerLink="/backoffice/courses"
-         routerLinkActive="active">Cursos</a>
+         routerLinkActive="active">Cursosos</a>
 
       <a class="toplink"
          routerLink="/backoffice/roles"
@@ -25,10 +25,6 @@
       <a class="toplink"
          routerLink="/backoffice/modalities"
          routerLinkActive="active">Modalidades</a>
-
-      <a class="toplink"
-         routerLink="/backoffice/settings"
-         routerLinkActive="active">Settings</a>
     </nav>
 
     <div class="ms-auto d-flex align-items-center gap-3">
