--- a/frontend/src/app/pages/frontoffice/register/register.html
+++ b/frontend/src/app/pages/frontoffice/register/register.html
@@ -15,58 +15,43 @@
         <span class="absolute bottom-1 left-0 h-0.5 bg-redIsla" style="width: 120px;"></span>
       </div>
 
-      <form class="mt-4 flex flex-col gap-2 w-full max-w-[280px]">
+      <form (submit)="submitRegister($event)" class="mt-4 flex flex-col gap-2 w-full max-w-[280px]">
 
         <div class="flex flex-col">
-          <label for="nome" class="mb-1 text-sm sm:text-xs font-poppins text-black">
-            Nome:
-          </label>
-          <input type="text" id="nome" placeholder="Introduza o seu nome" required
-            class="px-2 py-2 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-redIsla focus:border-redIsla placeholder:text-xs">
+          <label class="mb-1 text-xs">Nome:</label>
+          <input [(ngModel)]="form.name" name="name" type="text" required class="px-2 py-2 border">
         </div>
 
         <div class="flex flex-col">
-          <label for="usuario" class="mb-1 text-sm sm:text-xs font-poppins text-black">
-            Utilizador:
-          </label>
-          <input type="text" id="usuario" placeholder="Introduza o seu utilizador" required
-            class="px-2 py-2 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-redIsla focus:border-redIsla placeholder:text-xs">
+          <label class="mb-1 text-xs">Utilizador:</label>
+          <input [(ngModel)]="form.username" name="username" type="text" required class="px-2 py-2 border">
         </div>
 
         <div class="flex flex-col">
-          <label for="email" class="mb-1 text-sm sm:text-xs font-poppins text-black">
-            Email:
-          </label>
-          <input type="email" id="email" placeholder="Introduza o seu email" required
-            class="px-2 py-2 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-redIsla focus:border-redIsla placeholder:text-xs">
+          <label class="mb-1 text-xs">Email:</label>
+          <input [(ngModel)]="form.email" name="email" type="email" required class="px-2 py-2 border">
         </div>
 
         <div class="flex flex-col">
-          <label for="senha" class="mb-1 text-sm sm:text-xs font-poppins text-black">
-            Senha:
-          </label>
-          <input type="password" id="senha" placeholder="Introduza a sua palavra-passe" required
-            class="px-2 py-2 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-redIsla focus:border-redIsla placeholder:text-xs">
+          <label class="mb-1 text-xs">Senha:</label>
+          <input [(ngModel)]="form.password" name="password" type="password" required class="px-2 py-2 border">
         </div>
 
         <div class="flex flex-col">
-          <label for="senhaConfirm" class="mb-1 text-sm sm:text-xs font-poppins text-black">
-            Confirmar Senha:
-          </label>
-          <input type="password" id="senhaConfirm" placeholder="Confirme a sua palavra-passe" required
-            class="px-2 py-2 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-redIsla focus:border-redIsla placeholder:text-xs">
+          <label class="mb-1 text-xs">Confirmar Senha:</label>
+          <input [(ngModel)]="form.passwordConfirm" name="passwordConfirm" type="password" required class="px-2 py-2 border">
         </div>
 
-        <button type="submit" class="mt-2 px-4 py-2 w-full bg-redIsla text-sm sm:text-xs text-white font-poppins">
+        <button type="submit" class="mt-2 px-4 py-2 w-full bg-redIsla text-white font-poppins">
           Registar
         </button>
+      </form>
+
 
         <p class="mt-1 ml-[55px] text-xs text-black font-poppins">
           Já tem uma conta?
           <a href="" class="text-redIsla relative inline-block hover:underline">Entre Aqui</a>
         </p>
-
-      </form>
 
     </div>
   </div>
