--- a/frontend/src/app/components/backoffice/sidebar/sidebar.html
+++ b/frontend/src/app/components/backoffice/sidebar/sidebar.html
@@ -8,54 +8,42 @@
 
   <ul class="sidebar-nav pt-2">
     <li class="nav-item">
-      <a class="nav-link d-flex align-items-center"
-         routerLink="/backoffice/dashboard"
-         routerLinkActive="active">
+      <a class="nav-link d-flex align-items-center" routerLink="/backoffice/dashboard" routerLinkActive="active">
         <i class="cil-speedometer me-2"></i>
         <span>Dashboard</span>
       </a>
     </li>
 
-    <li class="nav-item">
-      <a class="nav-link d-flex align-items-center"
-         routerLink="/backoffice/users"
-         routerLinkActive="active">
+    <li *ngIf="auth.isAdmin()" class="nav-item">
+      <a class="nav-link d-flex align-items-center" routerLink="/backoffice/users" routerLinkActive="active">
         <i class="cil-user me-2"></i>
         <span>Utilizadores</span>
       </a>
     </li>
 
     <li class="nav-item">
-      <a class="nav-link d-flex align-items-center"
-         routerLink="/backoffice/courses"
-         routerLinkActive="active">
+      <a class="nav-link d-flex align-items-center" routerLink="/backoffice/courses" routerLinkActive="active">
         <i class="cil-book me-2"></i>
         <span>Cursos</span>
       </a>
     </li>
 
-     <li class="nav-item">
-      <a class="nav-link d-flex align-items-center"
-        routerLink="/backoffice/roles"
-        routerLinkActive="active">
+    <li *ngIf="auth.isAdmin()" class="nav-item">
+      <a class="nav-link d-flex align-items-center" routerLink="/backoffice/roles" routerLinkActive="active">
         <i class="cil-briefcase me-2"></i>
         <span>Funções</span>
       </a>
     </li>
 
-    <li class="nav-item">
-      <a class="nav-link d-flex align-items-center"
-        routerLink="/backoffice/areas"
-        routerLinkActive="active">
+    <li *ngIf="auth.isAdmin() || auth.isProfessor()" class="nav-item">
+      <a class="nav-link d-flex align-items-center" routerLink="/backoffice/areas" routerLinkActive="active">
         <i class="cil-layers me-2"></i>
         <span>Áreas</span>
       </a>
     </li>
 
-    <li class="nav-item">
-      <a class="nav-link d-flex align-items-center"
-        routerLink="/backoffice/modalities"
-        routerLinkActive="active">
+    <li *ngIf="auth.isAdmin() || auth.isProfessor()" class="nav-item">
+      <a class="nav-link d-flex align-items-center" routerLink="/backoffice/modalities" routerLinkActive="active">
         <i class="cil-applications me-2"></i>
         <span>Modalidades</span>
       </a>
