--- a/frontend/src/app/pages/frontoffice/home/home.html
+++ b/frontend/src/app/pages/frontoffice/home/home.html
@@ -60,7 +60,7 @@
 
 
       <button
-        class="mt-4 h-10 bg-redIsla text-white px-4 py-2 rounded-md hover:bg-black hover:shadow-lg  transition-shadow duration-300">
+        class="mt-4 h-10 bg-redIsla text-white px-4 py-2 hover:bg-black hover:shadow-lg  transition-shadow duration-300">
         Saiba Mais
       </button>
 
