--- a/frontend/src/app/pages/frontoffice/home/home.html
+++ b/frontend/src/app/pages/frontoffice/home/home.html
@@ -43,7 +43,7 @@
       <img [src]="course.image" [alt]="course.name" class="w-full h-40 object-cover mb-4">
 
       <p class="text-lg font-poppins font-semibold text-black mb-1">{{ course.name }}</p>
-      <p class="text-sm font-poppins text-gray-800 mb-2">ECTs {{ course.ects }}</p>
+      <p class="text-sm font-poppins text-gray-800 mb-2">ECTs {{ course.ects }} | {{ course.modality_name }}</p>
       <p class="text-sm font-poppins text-black mb-2">{{ course.description }}</p>
 
       <div class="flex items-center font-semibold gap-4 text-xs sm:text-sm text-black mt-auto">
