--- a/frontend/src/app/pages/frontoffice/home/home.html
+++ b/frontend/src/app/pages/frontoffice/home/home.html
@@ -38,7 +38,11 @@
   </div>
 
   <div class="w-full flex flex-row gap-4 overflow-x-auto p-4">
-    <a *ngFor="let course of courses()" [routerLink]="course.link" class="flex-none w-72 bg-white p-4 flex flex-col ">
+    <a *ngFor="let course of courses()"  class="flex-none w-72 bg-white p-4 flex flex-col 
+          border border-[#D9D9D9]
+          shadow-[0_4px_12px_rgba(0,0,0,0.18)]
+          hover:shadow-[0_6px_16px_rgba(0,0,0,0.22)]
+          transition-shadow duration-300">
 
       <img [src]="course.image" [alt]="course.name" class="w-full h-40 object-cover mb-4">
 
@@ -60,7 +64,7 @@
 
 
       <button
-        class="mt-4 h-10 bg-redIsla text-white px-4 py-2 hover:bg-black hover:shadow-lg  transition-shadow duration-300">
+        [routerLink]="" class="mt-4 h-10 bg-redIsla text-white px-4 py-2 hover:bg-black hover:shadow-lg  transition-shadow duration-300">
         Saiba Mais
       </button>
 
