--- a/frontend/src/app/pages/frontoffice/login/login.html
+++ b/frontend/src/app/pages/frontoffice/login/login.html
@@ -36,6 +36,8 @@
         </button>
       </form>
 
+
+
       <a href="" class="mt-1 ml-[75px] text-xs text-black font-poppins hover:underline">
         Esqueceu a sua senha?
       </a>
@@ -44,6 +46,18 @@
         Registe-se
       </a>
 
+      <p class="mt-4 text-xs text-gray-600 font-poppins">
+       <strong>Credenciais de admin:</strong> login: <span class="font-semibold">admin</span> — senha: <span class="font-semibold">teste123</span>
+      </p>
+
+      <p class="mt-4 text-xs text-gray-600 font-poppins">
+       <strong>Credenciais de student:</strong> login: <span class="font-semibold">jonas</span> — senha: <span class="font-semibold">teste123</span>
+      </p>
+
+      <p class="mt-4 text-xs text-gray-600 font-poppins">
+       <strong>Credenciais de teacher:</strong> login: <span class="font-semibold">toni</span> — senha: <span class="font-semibold">teste123</span>
+      </p>
+
     </div>
   </div>
 
@@ -51,3 +65,4 @@
     <img src="assets/pessoas.png" alt="Imagem Login" class="w-full h-full object-cover">
   </div>
 </div>
+
