--- a/frontend/src/app/components/backoffice/header/header.css
+++ b/frontend/src/app/components/backoffice/header/header.css
@@ -12,8 +12,8 @@
   right: 0;
   z-index: 1035;   
   height: 93px;
-  background: var(--app-header-bg);
-  color: var(--app-header-fg);
+  background: #fff;
+  color: #212529;
   border-bottom: 1px solid rgba(0,0,0,.1);
   display: flex;
   align-items: center;
@@ -21,15 +21,14 @@
 
 @media (min-width: 992px) {
   .app-header {
-    left: var(--admin-sidebar-width);
+    left: 260px;
     right: 0;
-    width: calc(100% - var(--admin-sidebar-width));
   }
 }
 
 .toplink {
   text-decoration: none;
-  color: var(--app-header-fg);
+  color: #212529;
   opacity: .85;
 }
 .toplink:hover,
@@ -70,5 +69,5 @@
   height: 9px;
   border-radius: 50%;
   background: #2ecc71;                 
-  border: 2px solid var(--app-header-bg);
+  border: 2px solid #fff;
 }
