--- a/frontend/src/app/pages/frontoffice/login/login.html
+++ b/frontend/src/app/pages/frontoffice/login/login.html
@@ -58,6 +58,10 @@
        <strong>Credenciais de teacher:</strong> login: <span class="font-semibold">toni</span> — senha: <span class="font-semibold">teste123</span>
       </p>
 
+      <p class="mt-4 text-xs text-gray-600 font-poppins">
+       <strong>Credenciais de guest:</strong> login: <span class="font-semibold">pedrao123</span> — senha: <span class="font-semibold">teste123</span>
+      </p>
+
     </div>
   </div>
 
