--- a/frontend/src/app/components/backoffice/header/header.html
+++ b/frontend/src/app/components/backoffice/header/header.html
@@ -9,6 +9,7 @@
       <a *ngIf="auth.isAdmin()" class="toplink" routerLink="/backoffice/roles" routerLinkActive="active">Funções</a>
       <a class="toplink" routerLink="/backoffice/areas" routerLinkActive="active">Áreas</a>
       <a class="toplink" routerLink="/backoffice/modalities" routerLinkActive="active">Modalidades</a>
+      <a class="toplink" routerLink="/backoffice/videos" routerLinkActive="active">Vídeos</a>
     </nav>
 
     <div class="ms-auto d-flex align-items-center gap-3">
