--- a/frontend/src/app/components/backoffice/sidebar/sidebar.html
+++ b/frontend/src/app/components/backoffice/sidebar/sidebar.html
@@ -55,5 +55,12 @@
         <span>Vídeos</span>
       </a>
     </li>
+
+    <li *ngIf="auth.isAdmin() || auth.isProfessor()" class="nav-item">
+      <a class="nav-link d-flex align-items-center" routerLink="/backoffice/quizzes" routerLinkActive="active">
+        <i class="cil-task me-2"></i>
+        <span>Quizzes</span>
+      </a>
+    </li>
   </ul>
 </div>
