--- a/frontend/src/app/pages/backoffice/course/courses/courses.css
+++ b/frontend/src/app/pages/backoffice/course/courses/courses.css
@@ -23,7 +23,6 @@
   display: flex;
   flex-direction: column;
   min-height: 440px;    
-  margin-top: 60px;     
 }
 
 .table-card .table-responsive {
@@ -44,6 +43,7 @@
   padding-top: .5rem;
   padding-bottom: .5rem;
   border-bottom: 1px solid rgba(0,0,0,.05);
+  margin-bottom: 40px;
 }
 
 :host {
