--- a/frontend/src/app/pages/backoffice/modality/modalities/modalities.css
+++ b/frontend/src/app/pages/backoffice/modality/modalities/modalities.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   min-height: 440px;    
-  margin-top: 60px;     
+  margin-top: 40px;     
 }
 
 .table-card .table-responsive {
@@ -23,6 +23,7 @@
   padding-top: .5rem;
   padding-bottom: .5rem;
   border-bottom: 1px solid rgba(0,0,0,.05);
+  margin-bottom: 40px;
 }
 
 .description-cell {
