--- a/frontend/src/app/pages/backoffice/role/roles/roles.css
+++ b/frontend/src/app/pages/backoffice/role/roles/roles.css
@@ -1,8 +1,7 @@
 .table-card {
   display: flex;
   flex-direction: column;
-  min-height: 440px;    
-  margin-top: 60px;     
+  min-height: 440px;     
 }
 
 .table-card .table-responsive {
@@ -23,6 +22,7 @@
   padding-top: .5rem;
   padding-bottom: .5rem;
   border-bottom: 1px solid rgba(0,0,0,.05);
+  margin-bottom: 40px;
 }
 
 .description-cell {
