--- a/frontend/src/app/pages/backoffice/user/users/users.css
+++ b/frontend/src/app/pages/backoffice/user/users/users.css
@@ -22,7 +22,7 @@
   display: flex;
   flex-direction: column;
   min-height: 440px;    
-  margin-top: 60px;     
+  margin-top: 40px;     
 }
 
 .table-card .table-responsive {
@@ -43,4 +43,5 @@
   padding-top: .5rem;
   padding-bottom: .5rem;
   border-bottom: 1px solid rgba(0,0,0,.05);
+  margin-bottom: 40px;
 }
