--- a/frontend/src/app/pages/backoffice/video/videos/videos.css
+++ b/frontend/src/app/pages/backoffice/video/videos/videos.css
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   min-height: 440px;
-  margin-top: 60px;
+  margin-top: 40px;
 }
 
 .table-card .table-responsive {
@@ -33,4 +33,5 @@
   padding-top: .5rem;
   padding-bottom: .5rem;
   border-bottom: 1px solid rgba(0,0,0,.05);
+  margin-bottom: 40px;
 }
