--- a/frontend/src/app/pages/frontoffice/home/home.html
+++ b/frontend/src/app/pages/frontoffice/home/home.html
@@ -1,20 +1,11 @@
 <div class="relative w-full overflow-x-hidden">
   <div class="relative w-full h-[800px] sm:h-[800px] md:h-[800px]">
     <video autoplay muted loop class="absolute top-0 left-0 w-full h-full object-cover z-0">
-      <source src="assets/Islanders.mp4" type="video/mp4">
+      <source src="assets/1.mp4" type="video/mp4">
       O teu browser não suporta vídeo.
     </video>
 
-    <section
-      class="relative z-10 flex flex-col justify-center items-center h-full text-center text-white px-4 sm:px-6 md:px-8">
-      <img src="assets/islaverse_home.png" alt="Bem Vindo Islander"
-        class="w-96 sm:w-64 md:w-80 lg:w-[600px] drop-shadow-lg">
-
-      <a href="https://islagaia.pt" target="_blank" rel="noopener noreferrer">
-        <img src="assets/islalogo.png" alt="Logo ISLA"
-          class="absolute -bottom-10 right-0 w-16 sm:w-20 md:w-24 lg:w-80 drop-shadow-md cursor-pointer transition-transform hover:scale-105">
-      </a>
-    </section>
+    
   </div>
 
   <div class="relative w-full h-[300px] sm:h-[400px] md:h-[500px] mt-8 sm:mt-12 md:mt-16">
@@ -37,36 +28,27 @@
     </p>
   </div>
 
-  <div class="w-full flex flex-row gap-4 overflow-x-auto p-4">
-    <a *ngFor="let course of courses()"  class="flex-none w-72 bg-white p-4 flex flex-col 
-          border border-[#D9D9D9]
-          shadow-[0_4px_12px_rgba(0,0,0,0.18)]
-          hover:shadow-[0_6px_16px_rgba(0,0,0,0.22)]
-          transition-shadow duration-300">
-
+  <div class="w-full flex flex-row gap-4 overflow-x-auto p-4"> <a *ngFor="let course of courses()"
+      class="flex-none w-72 bg-white p-4 flex flex-col border border-[#D9D9D9] shadow-[0_4px_12px_rgba(0,0,0,0.18)] hover:shadow-[0_6px_16px_rgba(0,0,0,0.22)] transition-shadow duration-300">
       <img [src]="course.image" [alt]="course.name" class="w-full h-40 object-cover mb-4">
-
-      <p class="text-lg font-poppins font-semibold text-black mb-1">{{ course.name }}</p>
+      <p class="text-lg font-poppins text-black mb-1">{{ course.name }}</p>
       <p class="text-sm font-poppins text-gray-800 mb-2">ECTs {{ course.ects }} | {{ course.modality_name }}</p>
-      <p class="text-sm font-poppins text-black mb-2">{{ course.description }}</p>
+      <p class="text-sm font-poppins text-black mb-2 line-clamp-3 break-words">
+  {{ course.description | slice:0:300 }}{{ course.description.length > 300 ? '...' : '' }}
+</p>
 
-      <div class="flex items-center font-semibold gap-4 text-xs sm:text-sm text-black mt-auto">
-        <span class="flex items-center gap-1">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" viewBox="0 0 24 24" fill="currentColor">
+      <div class="flex items-center gap-4 text-xs sm:text-sm text-black mt-auto"> <span
+          class="flex items-center gap-1"> <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" viewBox="0 0 24 24"
+            fill="currentColor">
             <circle cx="12" cy="12" r="10" stroke="black" stroke-width="2" fill="none" />
             <line x1="12" y1="12" x2="12" y2="7" stroke="black" stroke-width="2" />
             <line x1="12" y1="12" x2="16" y2="12" stroke="black" stroke-width="2" />
-          </svg>
-          {{ course.hours }}h
-        </span>
-        <span>{{ course.price }}€</span>
-      </div>
-
-
-      <button
-        [routerLink]="" class="mt-4 h-10 bg-redIsla text-white px-4 py-2 hover:bg-black hover:shadow-lg  transition-shadow duration-300">
-        Saiba Mais
-      </button>
+          </svg> {{ course.hours }}h </span> <span>{{ course.price }}€</span> </div> 
+          
+          <button [routerLink]="['/course', course.id]"
+        class="mt-4 h-10 bg-redIsla text-white px-4 py-2 hover:bg-black hover:shadow-lg transition-shadow duration-300">
+  Saiba Mais
+</button>
 
     </a>
   </div>
