--- a/frontend/src/app/pages/backoffice/course/course-create/course-create.html
+++ b/frontend/src/app/pages/backoffice/course/course-create/course-create.html
@@ -178,7 +178,7 @@
 
     <div class="card-body d-flex justify-content-end gap-2 border-top bg-white">
       <button class="btn btn-outline-secondary" type="button" (click)="cancel()">Cancelar</button>
-      <button class="btn btn-primary"
+      <button class="btn btn-primary isla-color-bg"
               type="button"
               [disabled]="!canSubmit()"
               (click)="submit()">
