--- a/frontend/src/app/pages/backoffice/role/role-edit/role-edit.html
+++ b/frontend/src/app/pages/backoffice/role/role-edit/role-edit.html
@@ -21,7 +21,7 @@
       Cancelar
     </button>
 
-    <button type="button" class="btn btn-primary"
+    <button type="button" class="btn btn-primary isla-color-bg"
             [disabled]="form.invalid || submitting()"
             (click)="submit()">
       <span *ngIf="!submitting()">Salvar</span>
