--- a/frontend/src/app/pages/backoffice/user/user-edit/user-edit.html
+++ b/frontend/src/app/pages/backoffice/user/user-edit/user-edit.html
@@ -105,7 +105,7 @@
 
     <div class="card-body d-flex justify-content-end gap-2 border-top bg-white">
       <button class="btn btn-outline-secondary" type="button" (click)="cancel()">Cancelar</button>
-      <button class="btn btn-primary" type="button" [disabled]="!canSubmit()" (click)="submit()">
+      <button class="btn btn-primary isla-color-bg" type="button" [disabled]="!canSubmit()" (click)="submit()">
         <span *ngIf="!submitting(); else saving2">Salvar</span>
       </button>
       <ng-template #saving2>
