--- a/frontend/src/app/pages/backoffice/video/video-create/video-create.html
+++ b/frontend/src/app/pages/backoffice/video/video-create/video-create.html
@@ -53,7 +53,7 @@
         Cancelar
       </button>
 
-      <button class="btn btn-primary"
+      <button class="btn btn-primary isla-color-bg"
               type="button"
               [disabled]="!canSubmit()"
               (click)="submit()">
