--- a/frontend/src/app/pages/backoffice/video/video-edit/video-edit.html
+++ b/frontend/src/app/pages/backoffice/video/video-edit/video-edit.html
@@ -56,7 +56,7 @@
         Cancelar
       </button>
 
-      <button class="btn btn-primary" type="button"
+      <button class="btn btn-primary isla-color-bg" type="button"
               [disabled]="!canSubmit()"
               (click)="submit()">
         <span *ngIf="!submitting(); else saving">Salvar</span>
