--- a/frontend/src/app/components/backoffice/header/header.html
+++ b/frontend/src/app/components/backoffice/header/header.html
@@ -11,6 +11,7 @@
       <a class="toplink" routerLink="/backoffice/modalities" routerLinkActive="active">Modalidades</a>
       <a class="toplink" routerLink="/backoffice/videos" routerLinkActive="active">Vídeos</a>
       <a class="toplink" routerLink="/backoffice/quizzes" routerLinkActive="active">Quizzes</a>
+      <a class="toplink" routerLink="/backoffice/questions" routerLinkActive="active">Questions</a>
     </nav>
 
     <div class="ms-auto d-flex align-items-center gap-3">
